XX/XX/XX (TRUST) Fix          : When diffusive-implicited scheme diverges, backup wasn't done
XX/XX/23 (TRUST) New options  : Default for AmgX preconditionner may be overloaded in data file. Ex: amgx gcp { precond c-amg { p:selector=PMIS p:strength_threshold=0.8 } ... }
--------------------------------------------------------------------------------------------------
Release notes version 1.9.3_beta : Enhancements, modifications and corrected bugs since version 1.9.2 :
--------------------------------------------------------------------------------------------------
18/07/23 (TRUST) New feature  : Read_MED|Lire_MED new keyword include_internal_face_groups to read a group of internal faces into a MED file. Can be used with keyword Internal_face_groups to apply Perte_Charge_Singuliere on this group of faces. See Perte_Charge_Singuliere validation sheet.
18/07/23 (TRUST) Keyword      : Previous PolyMAC discretization (compat with Pb_Multi) has been renamed as PolyMAC_P0P1NC. 
18/07/23 (TRUST) Major change : Three PolyMAC versions are now available in TRUST: PolyMAC, PolyMAC_P0P1NC and PolyMAC_P0. The last two are compatible with Pb_Multiphase.
18/07/23 (TRUST) Major change : Initial PolyMAC version is now hosted in TRUST. It is not useful with Pb_Multiphase but is used in several applications.
07/07/23 (TRUST) New feature  : Read_MED|Lire_MED and Write_MED|Ecrire_MED now relies exclusively on MED groups, not on families. Option 'exclude_groups' can be used in Read_MED to avoid reading some face groups.
07/07/23 (TRUST) Keyword      : Read_MED|Lire_MED, Write_MED|Ecrire_MED and Champ_Fonc_MED* old syntax is not supported anymore. Use the syntax with braces.
26/06/23 (TRUST) Fix          : Fluxes are not printed into an .out file if the dedicated operator's output file is not set in the code, this avoids confusions.
26/06/23 (TRUST) Fix          : Bug fix with lambda keyword in Perte_Charge_Circulaire in PolyMAC discretisation