@@ -1,0 +1,20 @@
+#!/bin/bash
+jdd=PAR_GPU_Aware_MPI
+if [ -f $jdd.TU ]
+then
+   # Try to detect GPU aware version: ToDo for rocM
+   echo "#include <mpi.h>
+#include <mpi-ext.h>
+#ifdef MPIX_CUDA_AWARE_SUPPORT
+int main() { return 1; }
+#endif" > gpu_aware_mpi.cpp
+   $TRUST_CC -O3 -I$CUDA_ROOT/include -L$CUDA_ROOT/lib64 -lcudart -o gpu_aware_mpi gpu_aware_mpi.cpp 2>/dev/null
+   [ $? != 0 ] && echo "No GPU-Aware MPI version detected." && exit 0
+   echo "GPU-Aware MPI detected! Enable device-device communications in TRUST:"
+   jdd2=enable_$jdd
+   cp $jdd.data $jdd2.data
+   TRUST_USE_GPU_AWARE_MPI=1 trust $jdd2 2 1>$jdd2.out_err 2>&1 || exit -1
+   echo "-----------------------------------------------------------------------------------------------------------------------"
+   echo "TRUST use MPI communications:                                 | TRUST use device communications:"
+   sdiff $jdd.TU $jdd2.TU | grep "GPU:"
+fi
